<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">
    <!-- Comentário em XML-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/txtTKNews"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_principal"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/editTituloNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@color/white"
        android:hint="@string/hint_titulo"
        android:maxLines="1"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/editNoticia"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_noticia"
        android:padding="15dp"
        android:background="@color/white"
        android:gravity="start"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gray"
        />

    <EditText
        android:id="@+id/editDataNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        />
    <EditText
        android:id="@+id/editAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_autor"
        android:padding="15dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gray"
        />
    <Button
        android:id="@+id/btnPublicarNoticia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_publicar"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/teal_700"
        android:layout_margin="20dp"
        android:maxLines="1"
        />

</LinearLayout>
</ScrollView>